--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,9 @@
 <h2>Keep Track of what you eat</h2>
 <app-food></app-food>
+<div *ngFor="let food of foods">
+  <div class="well">
+    <h3><em>{{food.name}}</em></h3>
+    <h4>{{food.description}}</h4>
+    <h4>{{food.calories}}</h4>
+  </div>
+</div>
