add event binding

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <h2>Keep Track of what you eat</h2>
 <app-food></app-food>
-<div *ngFor="let food of foods">
+<div *ngFor="let food of foods" (click)="goToDetailPage(food)" >
   <div class="well">
     <h3><em>{{food.name}}</em></h3>
     <h4>{{food.description}}</h4>
