create info to display on seperate route

--- a/src/app/food-detail/food-detail.component.html
+++ b/src/app/food-detail/food-detail.component.html
@@ -1,3 +1,8 @@
-<p>
-  food-detail works!
-</p>
+<h3>Edit Food Details</h3>
+<!-- <div *ngFor="let food of foods">
+  <div class="well">
+    <h3><em>{{food.name}}</em></h3>
+    <h4>{{food.description}}</h4>
+    <h4>{{food.calories}}</h4>
+  </div>
+</div> -->
