deleted instances of food component; add new-food

--- a/src/app/food-detail/food-detail.component.html
+++ b/src/app/food-detail/food-detail.component.html
@@ -1,8 +1,6 @@
 <h3>Edit Food Details</h3>
-<!-- <div *ngFor="let food of foods">
-  <div class="well">
-    <h3><em>{{food.name}}</em></h3>
-    <h4>{{food.description}}</h4>
-    <h4>{{food.calories}}</h4>
-  </div>
-</div> -->
+<div>
+  <h3>{{foodToDisplay.name}}</h3>
+  <h6>{{foodToDisplay.description}}</h6>
+  <h4>{{foodToDisplay.calories}}</h4>
+</div>
