--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <h2>Keep Track of what you eat</h2>
-<app-food></app-food>
+<app-new-food></app-new-food>
 <div *ngFor="let food of foods" (click)="goToDetailPage(food)" >
   <div class="well">
     <h3><em>{{food.name}}</em></h3>
