--- a/src/app/new-food/new-food.component.html
+++ b/src/app/new-food/new-food.component.html
@@ -1,16 +1,16 @@
-<div>
+<div id="add-food-form">
   <form>
     <div class="form-group">
       <label>Name</label>
-      <input type="text" #newName placeholder="name">
+      <input class="form-control" type="text" #newName placeholder="name" required>
     </div>
     <div class="form-group">
       <label>Description</label>
-      <input type="text" #newDescription  placeholder="description">
+      <input class="form-control" type="text" #newDescription  placeholder="description" required>
     </div>
     <div class="form-group">
       <label>Calories</label>
-      <input type="text" #newCalories  placeholder="calories">
+      <input class="form-control" type="text" #newCalories  placeholder="calories" required>
     </div>
     <button (click)="addFood(newName.value, newDescription.value, newCalories.value)">Save</button>
   </form>
