--- a/src/app/edit-food/edit-food.component.html
+++ b/src/app/edit-food/edit-food.component.html
@@ -1,3 +1,20 @@
-<p>
-  edit-food works!
-</p>
+<div id="edit-food">
+  <div *ngIf="childSelectedFood">
+    <h3>{{childSelectedFood.name}}</h3>
+    <hr>
+    <h3>Edit Selection</h3>
+    <div class="form-group">
+      <label>Enter Food name:</label>
+      <input class="form-control" [(ngModel)]="childSelectedFood.name">
+    </div>
+    <div class="form-group">
+      <label>Enter Food Description:</label>
+      <input class="form-control" [(ngModel)]="childSelectedFood.description">
+    </div>
+    <div class="form-group">
+      <label>Enter Calories:</label>
+      <input class="form-control" [(ngModel)]="childSelectedFood.calories">
+    </div>
+    <button (click)="doneButtonClicked()">Done</button>
+  </div>
+</div>
