--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,8 +2,10 @@
 <app-new-food (newFoodSender)="addFood($event)"></app-new-food>
 <div *ngFor="let food of foods">
   <div class="well">
-    <h3><em>{{food.name}}</em></h3>
+    <h3 (click)="goToDetailPage(food)"><a href="#">{{food.name}}</a></h3>
     <h4>{{food.description}}</h4>
     <h4>{{food.calories}}</h4>
+    <button (click)="editFood(food)">Edit Food</button>
   </div>
+  <app-edit-foods [childSelectedFood]="selectedFood" (doneButtonClickedSender)="finishedEditing()"></app-edit-foods>
 </div>
