--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,5 +7,5 @@
     <h4>{{food.calories}}</h4>
     <button (click)="editFood(food)">Edit Food</button>
   </div>
-  <app-edit-foods [childSelectedFood]="selectedFood" (doneButtonClickedSender)="finishedEditing()"></app-edit-foods>
+  <app-edit-foods [SelectedFood]="selectedFood" (doneButtonClickedSender)="finishedEditing()"></app-edit-foods>
 </div>
