--- a/src/app/edit-food/edit-food.component.html
+++ b/src/app/edit-food/edit-food.component.html
@@ -1,19 +1,19 @@
 <div id="edit-food">
-  <div *ngIf="childSelectedFood">
-    <h3>{{selectedFood.name}}</h3>
+  <div *ngIf="editingFood">
+    <h3>{{editingFood.name}}</h3>
     <hr>
     <h3>Edit Selection</h3>
     <div class="form-group">
       <label>Enter Food name:</label>
-      <input class="form-control" [(ngModel)]="selectedFood.name">
+      <input class="form-control" [(ngModel)]="editingFood.name">
     </div>
     <div class="form-group">
       <label>Enter Food Description:</label>
-      <input class="form-control" [(ngModel)]="selectedFood.description">
+      <input class="form-control" [(ngModel)]="editingFood.description">
     </div>
     <div class="form-group">
       <label>Enter Calories:</label>
-      <input class="form-control" [(ngModel)]="selectedFood.calories">
+      <input class="form-control" [(ngModel)]="editingFood.calories">
     </div>
-    <button (click)="updateFood(selectedFood)">Update
+    <button (click)="updateFood(editingFood)">Update
 </div>
