--- a/src/app/food-detail/food-detail.component.html
+++ b/src/app/food-detail/food-detail.component.html
@@ -1,7 +1,8 @@
 <div class="well">
-  <h3>{{(foodToDisplay | async)?.name}}</h3>
-  <h4>{{(foodToDisplay | async)?.description}}</h4>
-  <h4>{{(foodToDisplay | async)?.calories}}</h4>
-  <button (click)="editFood(foodToDisplay)">Edit food</button>
+  <h3>{{(foodToDisplay)?.name}}</h3>
+  <h4>{{(foodToDisplay)?.description}}</h4>
+  <h4>{{(foodToDisplay)?.calories}}</h4>
+  <button (click)="editFood()">Edit food</button>
   <button (click)="deleteFood(foodToDisplay)">Delete</button>
+  <app-edit-foods [editingFood]="editingFood" (doneButtonClickedSender)="finishedEditing()"></app-edit-foods>
 </div>
