--- a/src/app/new-food/new-food.component.html
+++ b/src/app/new-food/new-food.component.html
@@ -1,3 +1,21 @@
-<p>
-  new-food works!
-</p>
+<h3>Add New Food Entry</h3>
+<div class="well">
+  <div>
+    <label>Food Name:</label>
+    <br>
+    <input class="form-control" #newName required="">
+  </div>
+
+  <div>
+    <label>Food Description:</label>
+    <br>
+    <input class="form-control" #newDescription required="">
+  </div>
+
+  <div>
+    <label>Calories:</label>
+    <br>
+    <input class="form-control" #newCalories required=""></input>
+  </div>
+  <button (click)="submitForm(newName.value, newDescription.value, newCalories.value); newName.value=''; newDescription.value=''; newCalories.value=''">Add</button>
+</div>
