delete erroneous input tag

--- a/src/app/new-food/new-food.component.html
+++ b/src/app/new-food/new-food.component.html
@@ -15,7 +15,7 @@
   <div>
     <label>Calories:</label>
     <br>
-    <input class="form-control" #newCalories required=""></input>
+    <input class="form-control" #newCalories required="">
   </div>
   <button (click)="submitForm(newName.value, newDescription.value, newCalories.value); newName.value=''; newDescription.value=''; newCalories.value=''">Add</button>
 </div>
