insert update food tag into edit food html; create update form

--- a/src/app/edit-foods/edit-foods.component.html
+++ b/src/app/edit-foods/edit-foods.component.html
@@ -2,4 +2,6 @@
   <h3>{{(foodToDisplay | async)?.name}}</h3>
   <h4>{{(foodToDisplay | async)?.description}}</h4>
   <h4>Calories: {{(foodToDisplay | async)?.calories}}</h4>
+  <br>
+  <app-update-foods></app-update-foods>
 </div>
