--- a/src/app/update-foods/update-foods.component.html
+++ b/src/app/update-foods/update-foods.component.html
@@ -1,3 +1,12 @@
-<p>
-  update-foods works!
-</p>
+<h4>Edit Food Item</h4>
+
+<label>New Food Name:</label>
+<input class="form-control" [(ngModel)]="selectedFood.name">
+<br>
+
+<label>New Food Description:</label>
+<input class="form-control" [(ngModel)]="selectedFood.description">
+<br>
+
+<label>New Food Calories:</label>
+<input class="form-control" [(ngModel)]="selectedFood.calories">
