--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
   <app-new-food></app-new-food>
 </div>
 <h3>Here's what you've consumed:</h3>
-<div *ngFor="let food of foods | async" (click)="goToEditPage(food)" class="well">
-    <h4>{{food.name}}</h4>
+<div *ngFor="let food of foods | async" class="well">
+    <h4 (click)="goToEditPage(food)">{{food.name}}</h4>
     <h5>{{food.description}}</h5>
 </div>
