click button aded to home directs you to newfood page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,5 @@
 
-<div class="well">
-  <app-new-food></app-new-food>
-</div>
+<button (click)="redirect()">Add new Entry</button>
 <h3>Here's what you've consumed:</h3>
 <div *ngFor="let food of foods | async" class="well">
     <h4 (click)="goToEditPage(food)">{{food.name}}</h4>
