--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 
 <button (click)="redirect()">Add new Entry</button>
 <h3>Here's what you've consumed:</h3>
-<div *ngFor="let food of foods | async" class="well">
-    <h4 (click)="goToEditPage(food)">{{food.name}}</h4>
+<div *ngFor="let food of foods | async" (click)="goToEditPage(food)" class="well">
+    <h4>{{food.name}}</h4>
     <h5>{{food.description}}</h5>
 </div>
