--- a/src/app/new-food/new-food.component.html
+++ b/src/app/new-food/new-food.component.html
@@ -1,5 +1,5 @@
 <h3>Add New Food Entry</h3>
-<div class="well">
+<div id="new-food-form" class="well">
   <div>
     <label>Food Name:</label>
     <br>
@@ -18,5 +18,5 @@
     <input class="form-control" #newCalories required="">
   </div>
   <br>
-  <button (click)="submitForm(newName.value, newDescription.value, newCalories.value); newName.value=''; newDescription.value=''; newCalories.value=''">Add</button>
+  <button (click)="redirect();" class="btn btn-default" (click)="submitForm(newName.value, newDescription.value, newCalories.value); newName.value=''; newDescription.value=''; newCalories.value=''">Add</button>
 </div>
