--- a/src/app/edit-foods/edit-foods.component.html
+++ b/src/app/edit-foods/edit-foods.component.html
@@ -3,7 +3,7 @@
   <h4>{{(foodToDisplay | async)?.description}}</h4>
   <h4>Calories: {{(foodToDisplay | async)?.calories}}</h4>
   <br>
-  <button (click)="editFood()">Edit Food</button>
+  <button class="btn btn-default" (click)="editFood()">Edit Food</button>
   <app-update-foods [editingFood]="editingFood" (doneButtonClickedSender)="finishedEditing()"></app-update-foods>
 
 </div>
