establishing set up for subscription to firebase

--- a/src/app/edit-foods/edit-foods.component.html
+++ b/src/app/edit-foods/edit-foods.component.html
@@ -1,9 +1,5 @@
 <div id="food-detail" class="well">
-  <h3>{{(foodToDisplay | async)?.name}}</h3>
-  <h4>{{(foodToDisplay | async)?.description}}</h4>
-  <h4>Calories: {{(foodToDisplay | async)?.calories}}</h4>
-  <br>
-  <button class="btn btn-default" (click)="editFood()">Edit Food</button>
-  <app-update-foods [editingFood]="editingFood" (doneButtonClickedSender)="finishedEditing()"></app-update-foods>
-
+  <h3>{{foodToDisplay?.name}}</h3>
+  <h4>{{foodToDisplay?.description}}</h4>
+  <h4>Calories: {{foodToDisplay?.calories}}</h4>
 </div>
