rearrange structure of site

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       <a class="navbar-brand" routerLink="">Food Diary</a>
     </div>
     <ul class="nav navbar-nav navbar-right">
+      <li><a routerLink="new-food">Update and Edit Foods</a></li>
     </ul>
   </div>
 </nav>
