--- a/src/app/new-food/new-food.component.html
+++ b/src/app/new-food/new-food.component.html
@@ -18,5 +18,9 @@
     <input class="form-control" #newCalories>
   </div>
   <br>
-  <button (click)="redirect();" class="btn btn-default" (click)="submitForm(newName.value, newDescription.value, newCalories.value); newName.value=''; newDescription.value=''; newCalories.value=''">Add</button>
+  <button class="btn btn-default" (click)="submitForm(newName.value, newDescription.value, newCalories.value); newName.value='';
+  newDescription.value=''; newCalories.value=''">Add</button>
+</div>
+<div class="well">
+  <app-home></app-home>
 </div>
