--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,11 @@
 
-<button class="btn btn-default" (click)="redirect()">Add New Entry</button>
 <h3>Here's what you've consumed:</h3>
 <div id="food-tiles" *ngFor="let food of foods"  class="well">
-    <h4 (click)="goToEditPage(food)">{{food?.name}}</h4>
-    <h5>{{food?.description}}</h5>
+  <h4 (click)="goToEditPage(food)">{{food?.name}}</h4>
+  <h5>{{food?.description}}</h5>
+  <div *ngIf="currentRoute === '/new-food'">
+    {{food?.description}}
+    <hr>
+    <app-update-foods [selectedFood]="food"></app-update-foods>
+  </div>
 </div>
