work finally.  Add styling and new ids as well

--- a/src/app/food-detail/food-detail.component.html
+++ b/src/app/food-detail/food-detail.component.html
@@ -1,5 +1,5 @@
 <div id="food-detail" class="well">
   <h3>{{foodToDisplay?.name}}</h3>
   <h4>{{foodToDisplay?.description}}</h4>
-  <h4>Calories: {{foodToDisplay?.calories}}</h4>
+  <h4>${{foodToDisplay?.calories}}</h4>
 </div>
