--- a/src/app/new-food/new-food.component.html
+++ b/src/app/new-food/new-food.component.html
@@ -3,7 +3,7 @@
   <div>
     <label>Food Name:</label>
     <br>
-    <input class="form-control" #newName required="">
+    <input class="form-control" #newName>
   </div>
 
   <div>
