--- a/src/styles.css
+++ b/src/styles.css
@@ -15,16 +15,13 @@ body {
   margin: 0 auto;
   margin-top: 5%;
   margin-bottom: 5%;
+  border: solid red 4px;
+  
 }
 
 #food-tiles,
 div#food-detail {
-  width: 65%;
-}
-
-#food-tiles > *,
-div#food-detail > *{
-margin-left: 15%;
+  width: 50%;
 }
 
 div#food-detail button {
@@ -40,4 +37,8 @@ div.well {
   color: #fff;
   box-shadow: 1px -1px 2px, inset 1px 1px 2px;
   border: none;
+}
+div.well input,
+div.well button {
+  color: #000;
 }
