add styling and ids to app

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 
-<h3>Here's what you've consumed:</h3>
+<h3 id="food-tile-label">Here's what you've consumed:</h3>
 <div id="food-tiles" *ngFor="let food of foods"  class="well">
   <h4 (click)="goToEditPage(food)">{{food?.name}}</h4>
   <h5>{{food?.description}}</h5>
