--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,13 @@
 
 <h3 id="food-tile-label">Here's what you've consumed:</h3>
-<div id="food-tiles" *ngFor="let food of foods"  class="well">
+
+<select id="filter" (change)="onChange($event.target.value)">
+  <option value="allFoods">All Foods</option>
+  <option value="underThreeHundred">Foods under 300 Calories</option>
+  <option value="overThreeHundred">Foods over 300 Calories</option>
+</select>
+
+<div id="food-tiles" *ngFor="let food of foods | filter:calorieFilter"  class="well">
   <h4 (click)="goToEditPage(food)">{{food?.name}}</h4>
   <h5>{{food?.description}}</h5>
   <div *ngIf="currentRoute === '/new-food'">
