--- a/src/styles.css
+++ b/src/styles.css
@@ -60,3 +60,12 @@ div#food-tiles,
   margin-bottom: 5%;
   text-align: center;
 }
+
+#filter {
+  margin: 0 auto;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  align: center;
+  color: #000;
+  margin-left: 42%;
+}
